--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     align-items: center; 
     min-height: 100vh;
     /* background: #000; */
-    background-image: url("bc2.jpg");
+    background-image: url("pics/bc2.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
